--- a/src/components/UI/Card/Card.module.css
+++ b/src/components/UI/Card/Card.module.css
@@ -1,5 +1,7 @@
 .card {
-    margin: auto;
     text-align: center;
+    margin: auto;
+    padding: 0;
     width: 100%;
+    height: 100%;
 }
